Initial setup with examples from lessons

--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <title>
-        Site title
+        Hiltz Blog Site
     </title>
-    <!-- Will put red boxes around every element for debugging -->
-    <!-- <style> 
-        * {
-          border: 1px solid red !important;
-        }
-    </style> -->
-    <meta name="description" content="Generic html template." />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>test
+  <body>
+    <div class = "container">
+      <div class="header box">Header</div>
+      <div class="sidebar box"><h1>Blog Posts</h1></div>
+      <div class="content box">
+  <!-- nest grid here -->
+        <div class="nestedGrid">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+      <div class="footer box">Footer</div>
+    </div>
 
-
-    <script src="script.js"></script>
   </body>
 </html>
