Created the basic layout for the blog

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
     <title>
         Hiltz Blog Site
     </title>
@@ -9,19 +10,42 @@
   </head>
   <body>
     <div class = "container">
-      <div class="header box">Header</div>
-      <div class="sidebar box"><h1>Blog Posts</h1></div>
-      <div class="content box">
-  <!-- nest grid here -->
-        <div class="nestedGrid">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
+      <div class="header">Header</div>
+      <div class="navcontainer">
+          <a class="navcontent" href="index.html">Home</a>
+          <a class="navcontent" href="#">Author Info</a>
+          <a class="navcontent" href="#">Contact</a>
       </div>
-      <div class="footer box">Footer</div>
+      <div class="blogprecontainer">
+          <div class="blogpreview" >
+            <a href="blog1.html">test</a>
+          </div>
+          <div class="blogpreview">
+            <a href="blog2.html">test</a>
+          </div>
+          <div class="blogpreview">
+            <a href="blog3.html">test</a>
+          </div>
+          <div class="blogpreview">
+            <a href="blog4.html">test</a>
+          </div>
+          <div class="blogpreview">
+            <a href="blog5.html">test</a>
+          </div>
+          <div class="blogpreview">
+            <a href="blog6.html">test</a>
+          </div>
+          <div class="blogpreview">
+            <a href="blog7.html">test</a>
+          </div>
+          <div class="blogpreview">
+            <a href="blog8.html">test</a>
+          </div>
+          <div class="blogpreview">
+            <a href="blog9.html">test</a>
+          </div>
+      </div>
+      <div class="footer">Footer</div>
     </div>
-
   </body>
 </html>
