Changed the file structure and refactored a few things to get ready for adding the content

--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -6,13 +6,13 @@
     <title>
         Blog 2
     </title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class = "container">
       <div class="header">Header</div>
       <div class="navcontainer">
-          <a class="navcontent" href="index.html">Home</a>
+          <a class="navcontent" href="../index.html">Home</a>
           <a class="navcontent" href="#">Author Info</a>
           <a class="navcontent" href="#">Contact</a>
       </div>
