--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
       </div>
       <div class="blogprecontainer">
           <div class="blogpreview" >
-            <a href="blog1.html">test</a>
+            <a href="blogs/blog1.html">test</a>
           </div>
           <div class="blogpreview">
-            <a href="blog2.html">test</a>
+            <a href="blogs/blog2.html">test</a>
           </div>
           <div class="blogpreview">
-            <a href="blog3.html">test</a>
+            <a href="blogs/blog3.html">test</a>
           </div>
           <div class="blogpreview">
-            <a href="blog4.html">test</a>
+            <a href="blogs/blog4.html">test</a>
           </div>
           <div class="blogpreview">
-            <a href="blog5.html">test</a>
+            <a href="blogs/blog5.html">test</a>
           </div>
           <div class="blogpreview">
-            <a href="blog6.html">test</a>
+            <a href="blogs/blog6.html">test</a>
           </div>
           <div class="blogpreview">
-            <a href="blog7.html">test</a>
+            <a href="blogs/blog7.html">test</a>
           </div>
           <div class="blogpreview">
-            <a href="blog8.html">test</a>
+            <a href="blogs/blog8.html">test</a>
           </div>
           <div class="blogpreview">
-            <a href="blog9.html">test</a>
+            <a href="blogs/blog9.html">test</a>
           </div>
       </div>
       <div class="footer">Footer</div>
