--- a/blogs/blog5.html
+++ b/blogs/blog5.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
     <title>
-        Blog 4
+        Blog 5
     </title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class = "container">
       <div class="header">Header</div>
       <div class="navcontainer">
-          <a class="navcontent" href="index.html">Home</a>
+          <a class="navcontent" href="../index.html">Home</a>
           <a class="navcontent" href="#">Author Info</a>
           <a class="navcontent" href="#">Contact</a>
       </div>
