Filled the site with basic images and formats

--- a/blogs/blog5.html
+++ b/blogs/blog5.html
@@ -10,16 +10,31 @@
   </head>
   <body>
     <div class = "container">
-      <div class="header">Header</div>
-      <div class="navcontainer">
-          <a class="navcontent" href="../index.html">Home</a>
-          <a class="navcontent" href="#">Author Info</a>
-          <a class="navcontent" href="#">Contact</a>
+      <div class="header">
+        <h1>
+          Hiltz Kitty Blog
+        </h1>
       </div>
-      <div class="blogcontainer">
-          blog here
+      <div class="nav-container">
+          <a class="nav-content" href="../index.html">Home</a>
+          <a class="nav-content" href="../nav/about.html">Author Info</a>
+          <a class="nav-content" href="../nav/contact.html">Contact</a>
+          <a class="nav-content" href="blog4.html">Previous</a>
+          <a class="nav-content" href="blog6.html">Next</a>
       </div>
-      <div class="footer">Footer</div>
+      <div class="blog-grid">
+        <div class="blog-flex box" >
+          <img src="../images/Rumbles2.jpg" alt="Rumbles" class="blog-pic">
+          <h2 class="blog-text">
+            Best buds
+          </h2>
+        </div>
+      </div>
+      <div class="footer">
+        <h3>
+          Updated 2020
+        </h3>
+      </div>
     </div>
   </body>
 </html>
