--- a/nav/about.html
+++ b/nav/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
     <title>
-        Blog 2
+        Blog 1
     </title>
     <link href="../css/style.css" rel="stylesheet">
   </head>
@@ -19,14 +19,12 @@
           <a class="nav-content" href="../index.html">Home</a>
           <a class="nav-content" href="../nav/about.html">Author Info</a>
           <a class="nav-content" href="../nav/contact.html">Contact</a>
-          <a class="nav-content" href="blog1.html">Previous</a>
-          <a class="nav-content" href="blog3.html">Next</a>
       </div>
       <div class="blog-grid">
         <div class="blog-flex box" >
-          <img src="../images/Rumbles1.jpg" alt="Rumbles" class="blog-pic">
+          <img src="../images/Author.jpg" alt="The blog author" class="blog-pic">
           <h2 class="blog-text">
-            Best buds
+            Here's the author running the Cooper River Bridge run with a chimichanga in his mouth
           </h2>
         </div>
       </div>
