--- a/nav/contact.html
+++ b/nav/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
     <title>
-        Blog 2
+        Blog 1
     </title>
     <link href="../css/style.css" rel="stylesheet">
   </head>
@@ -19,16 +19,11 @@
           <a class="nav-content" href="../index.html">Home</a>
           <a class="nav-content" href="../nav/about.html">Author Info</a>
           <a class="nav-content" href="../nav/contact.html">Contact</a>
-          <a class="nav-content" href="blog1.html">Previous</a>
-          <a class="nav-content" href="blog3.html">Next</a>
       </div>
       <div class="blog-grid">
-        <div class="blog-flex box" >
-          <img src="../images/Rumbles1.jpg" alt="Rumbles" class="blog-pic">
-          <h2 class="blog-text">
-            Best buds
-          </h2>
-        </div>
+          <h1>
+            The author is a private person and doesn't wish to be contacted
+          </h1>
       </div>
       <div class="footer">
         <h3>
