--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -26,7 +26,16 @@
         <div class="blog-flex box" >
           <img src="../images/Daryl1.jpg" alt="Daryl" class="blog-pic">
           <h2 class="blog-text">
-            Best buds
+            I think someone said something to offend Ms. Daryl.  What did they say?!  Catty ipsum. Run outside as soon as 
+            door open stuff and things or meow meow. Cat cat moo moo lick ears lick paws hunt by meowing loudly at 5am next to 
+            human slave food dispenser chase mice. Destroy couch don't nosh on the birds. Cat slap dog in face missing until 
+            dinner time. Cat ass trophy unwrap toilet paper tweeting a baseball, yet kitty poochy. Cereal boxes make for five 
+            star accommodation kitty loves pigs. Catasstrophe throwup on your pillow, and found somthing move i bite it tail 
+            find box a little too small and curl up with fur hanging out . Jump around on couch, meow constantly until given 
+            food, love you, then bite you. Eat fish on floor. Rub butt on table i bet my nine lives on you-oooo-ooo-hooo x lay 
+            on arms while you're using the keyboard. Decide to want nothing to do with my owner today gnaw the corn cob or man 
+            running from cops stops to pet cats, goes to jail yet i like cats because they are fat and fluffy chase laser i show 
+            my fluffy belly but it's a trap! if you pet it i will tear up your hand or be superior.
           </h2>
         </div>
       </div>
