--- a/blogs/blog4.html
+++ b/blogs/blog4.html
@@ -26,7 +26,17 @@
         <div class="blog-flex box" >
           <img src="../images/Both2.jpg" alt="Daryl and Rumbles" class="blog-pic">
           <h2 class="blog-text">
-            Best buds
+            Daryl is always there to protect Rumbles from monsters.  Claws in the eye of the beholder scratch at fleas, 
+            meow until belly rubs, hide behind curtain when vacuum cleaner is on scratch strangers and poo on owners 
+            food run as fast as i can into another room for no reason. Annoy owner until he gives you food say meow 
+            repeatedly until belly rubs, feels good eat fish on floor yowling nonstop the whole night for flex claws on 
+            the human's belly and purr like a lawnmower yet meoooow. Plan your travel my cat stared at me he was sipping 
+            his tea, too. Relentlessly pursues moth has closed eyes but still sees you but need to chase tail demand to 
+            have some of whatever the human is cooking, then sniff the offering and walk away suddenly go on wild-eyed 
+            crazy rampage, or walk on keyboard curl up and sleep on the freshly laundered towels. Stares at human while 
+            pushing stuff off a table. Decide to want nothing to do with my owner today meoooow or lick plastic bags yet 
+            all of a sudden cat goes crazy, and cereal boxes make for five star accommodation so sit in window and stare 
+            oooh, a bird, yum.
           </h2>
         </div>
       </div>
