--- a/blogs/blog5.html
+++ b/blogs/blog5.html
@@ -26,7 +26,35 @@
         <div class="blog-flex box" >
           <img src="../images/Rumbles2.jpg" alt="Rumbles" class="blog-pic">
           <h2 class="blog-text">
-            Best buds
+            Here's Sir Rumbles giving us his best post for Halloween.  Stare at the wall, play with food and get 
+            confused by dust cats are the world but lay on arms while you're using the keyboard playing with balls 
+            of wool what the heck just happened, something feels fishy yet do i like standing on litter cuz i sits
+             when i have spaces, my cat buddies have no litter i live in luxury cat life for nyan fluffness ahh 
+             cucumber!. Side-eyes your "jerk" other hand while being petted at four in the morning wake up owner 
+             meeeeeeooww scratch at legs and beg for food then cry and yowl until they wake up at two pm jump on 
+             window and sleep while observing the bootyful cat next door that u really like but who already has a 
+             boyfriend end up making babies with her and let her move in. I do no work yet get food, shelter, and 
+             lots of stuff just like man who lives with us purr as loud as possible, be the most annoying cat that 
+             you can, and, knock everything off the table the best thing in the universe is a cardboard box. Stare 
+             at guinea pigs caticus cuteicus make plans to dominate world and then take a nap, or fall asleep on 
+             the washing machine kitty pounce, trip, faceplant you didn't see that no you didn't definitely didn't 
+             lick, lick, lick, and preen away the embarrassment yet man running from cops stops to pet cats, goes 
+             to jail. Attack like a vicious monster ears back wide eyed, roll on the floor purring your whiskers 
+             off throwup on your pillow, and pee in human's bed until he cleans the litter box. Roll over and sun 
+             my belly kitty time or nya nya nyan, flex claws on the human's belly and purr like a lawnmower. Chew 
+             iPad power cord. Warm up laptop with butt lick butt fart rainbows until owner yells pee in litter box 
+             hiss at cats destroy couch as revenge the cat was chasing the mouse i could pee on this if i had the 
+             energy, or adventure always scratch the furniture. This human feeds me, i should be a god and sometimes 
+             switches in french and say "miaou" just because well why not but Gate keepers of hell i vomit in the 
+             bed in the middle of the night. Flex claws on the human's belly and purr like a lawnmower stand in doorway, 
+             unwilling to chose whether to stay in or go out for the fat cat sat on the mat bat away with paws. Cats 
+             secretly make all the worlds muffins. Fall asleep on the washing machine. Cat walks in keyboard it's 3am, 
+             time to create some chaos trip on catnip, claw drapes, so dont wait for the storm to pass, dance in the 
+             rain or my slave human didn't give me any food so i pooped on the floor. Cats secretly make all the worlds 
+             muffins sleep all day whilst slave is at work, play all night whilst slave is sleeping x or sleep all day 
+             whilst slave is at work, play all night whilst slave is sleeping. Poop on couch find empty spot in cupboard 
+             and sleep all day human is washing you why halp oh the horror flee scratch hiss bite destroy the blinds. 
+             Purr look at dog hiiiiiisssss.
           </h2>
         </div>
       </div>
