--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- blog 1 -->
         <div class="blog-flex-preview box" >
           <img src="images/Both1.jpg" alt="Daryl and Rumbles" class="blog-pic">
-          <p class="blog-text">
+          <p class="blog-pic-text">
             Best buds
           </p>
           <a href="blogs/blog1.html" class="buttontext button">
@@ -34,7 +34,7 @@
         <!-- blog 2 -->
         <div class="blog-flex-preview box" >
           <img src="images/Rumbles1.jpg" alt="Rumbles" class="blog-pic">
-          <p class="blog-text">
+          <p class="blog-pic-text">
             So fierce
           </p>
           <a href="blogs/blog2.html" class="buttontext button">
@@ -44,7 +44,7 @@
         <!-- blog 3 -->
         <div class="blog-flex-preview box" >
           <img src="images/Daryl1.jpg" alt="Daryl" class="blog-pic">
-          <p class="blog-text">
+          <p class="blog-pic-text">
             Daryl is confused
           </p>
           <a href="blogs/blog3.html" class="buttontext button">
@@ -54,7 +54,7 @@
         <!-- blog 4 -->
         <div class="blog-flex-preview box" >
           <img src="images/Both2.jpg" alt="Daryl and Rumbles" class="blog-pic">
-          <p class="blog-text">
+          <p class="blog-pic-text">
             Daryl protecting Rumbles
           </p>
           <a href="blogs/blog4.html" class="buttontext button">
@@ -64,7 +64,7 @@
         <!-- blog 5 -->
         <div class="blog-flex-preview box" >
           <img src="images/Rumbles2.jpg" alt="Rumbles" class="blog-pic">
-          <p class="blog-text">
+          <p class="blog-pic-text">
             Scary Rumbles
           </p>
           <a href="blogs/blog5.html" class="buttontext button">
@@ -74,7 +74,7 @@
         <!-- blog 6 -->
         <div class="blog-flex-preview box" >
           <img src="images/Daryl2.jpg" alt="Daryl" class="blog-pic">
-          <p class="blog-text">
+          <p class="blog-pic-text">
             Pst... Here's a blep for ya
           </p>
           <a href="blogs/blog6.html" class="buttontext button">
@@ -84,7 +84,7 @@
         <!-- blog 7 -->
         <div class="blog-flex-preview box" >
           <img src="images/Both3.jpg" alt="Daryl and Rumbles" class="blog-pic">
-          <p class="blog-text">
+          <p class="blog-pic-text">
             Protectors of the realm
           </p>
           <a href="blogs/blog7.html" class="buttontext button">
@@ -94,7 +94,7 @@
         <!-- blog 8 -->
         <div class="blog-flex-preview box" >
           <img src="images/Rumbles3.jpg" alt="Rumbles" class="blog-pic">
-          <p class="blog-text">
+          <p class="blog-pic-text">
             Lookin sharp Rumbles
           </p>
           <a href="blogs/blog8.html" class="buttontext button">
@@ -104,7 +104,7 @@
         <!-- blog 9 -->
         <div class="blog-flex-preview box" >
           <img src="images/Daryl3.jpg" alt="Daryl" class="blog-pic">
-          <p class="blog-text">
+          <p class="blog-pic-text">
             Daryl is such a proud kitty
           </p>
           <a href="blogs/blog9.html" class="buttontext button">
