--- a/nav/about.html
+++ b/nav/about.html
@@ -19,6 +19,9 @@
           <a class="nav-content" href="../index.html">Home</a>
           <a class="nav-content" href="../nav/about.html">Author Info</a>
           <a class="nav-content" href="../nav/contact.html">Contact</a>
+          <a class="nav-content" href="#">Facebook</a>
+          <a class="nav-content" href="#">Twitter</a>
+          <a class="nav-content" href="#">LinkedIn</a>
       </div>
       <div class="blog-grid">
         <div class="blog-flex box" >
