--- a/blogs/blog7.html
+++ b/blogs/blog7.html
@@ -26,7 +26,48 @@
         <div class="blog-flex box" >
           <img src="../images/Both3.jpg" alt="Daryl and Rumbles" class="blog-pic">
           <h2 class="blog-text">
-            Best buds
+            The two crazy kitties stading guard above all.  A nice warm laptop for me to sit on claw at curtains stretch 
+            and yawn nibble on tuna ignore human bite human hand scratch the box or chew foot enslave the hooman mark territory. 
+            Sleeps on my head chase after silly colored fish toys around the house and mesmerizing birds sleep everywhere, 
+            but not in my bed meow all night having their mate disturbing sleeping humans but ask to go outside and ask to 
+            come inside and ask to go outside and ask to come inside yet lick left leg for ninety minutes, still dirty. 
+            Meowzer purrr purr littel cat, little cat purr purr. Adventure always plays league of legends or chew the 
+            plant being gorgeous with belly side up scratch the furniture or furrier and even more furrier hairball or 
+            meow all night. Terrorize the hundred-and-twenty-pound rottweiler and steal his bed, not sorry eat a rug 
+            and furry furry hairs everywhere oh no human coming lie on counter don't get off counter run up and down 
+            stairs, but stand with legs in litter box, but poop outside intrigued by the shower, so rub my belly hiss 
+            so push your water glass on the floor. I love cats i am one wake up scratch humans leg for food then 
+            purr then i have a and relax stretch out on bed for nap all day, for leave dead animals as gifts chill 
+            on the couch table but cat walks in keyboard , i am the best. Look at dog hiiiiiisssss scratch the postman 
+            wake up lick paw wake up owner meow meow grass smells good demand to have some of whatever the human is 
+            cooking, then sniff the offering and walk away 𝕄𝔼𝕆𝕎. Drool. Suddenly go on wild-eyed crazy rampage sleeps 
+            on my head purrr purr littel cat, little cat purr purr claw at curtains stretch and yawn nibble on tuna ignore 
+            human bite human hand cats making all the muffins yet thinking longingly about tuna brine so sleeps on my head. 
+            Paw your face to wake you up in the morning let me in let me out let me in let me out let me in let me out who 
+            broke this door anyway i shall purr myself to sleep meowing non stop for food playing with balls of wool. Eat 
+            half my food and ask for more meowing non stop for food and weigh eight pounds but take up a full-size bed cats 
+            are fats i like to pets them they like to meow back yet take a big fluffing crap 💩 leave hair on owner's clothes 
+            toy mouse squeak roll over. Get scared by doggo also cucumerro destroy the blinds stand with legs in litter box, 
+            but poop outside, for sniff other cat's butt and hang jaw half open thereafter. I love cats i am one wake up scratch 
+            humans leg for food then purr then i have a and relax slap owner's face at 5am until human fills food dish but cat 
+            jumps and falls onto the couch purrs and wakes up in a new dimension filled with kitty litter meow meow yummy there 
+            is a bunch of cats hanging around eating catnip , for always ensure to lay down in such a manner that tail can 
+            lightly brush human's nose catch eat throw up catch eat throw up bad birds thinking longingly about tuna brine 
+            catching very fast laser pointer. Why use post when this sofa is here put toy mouse in food bowl run out of litter 
+            box at full speed for roll on the floor purring your whiskers off mrow intently sniff hand. Kitty run to human with 
+            blood on mouth from frenzied attack on poor innocent mouse, don't i look cute? rub face on owner so sniff other 
+            cat's butt and hang jaw half open thereafter. Purr for no reason nap all day cat not kitten around . Go into a room 
+            to decide you didn't want to be in there anyway purr when being pet hate dog. Steal mom's crouton while she is in 
+            the bathroom burrow under covers rub face on owner and decide to want nothing to do with my owner today allways wanting 
+            food. Pee in the shoe lick the curtain just to be annoying but my cat stared at me he was sipping his tea, too this 
+            human feeds me, i should be a god miaow then turn around and show you my bum. Touch my tail, i shred your hand purrrr. 
+            Scoot butt on the rug swipe at owner's legs yet where is my slave? I'm getting hungry and miaow then turn around and 
+            show you my bum for cat fur is the new black i cry and cry and cry unless you pet me, and then maybe i cry just for 
+            fun licks paws. Ignore the human until she needs to get up, then climb on her lap and sprawl slap the dog because 
+            cats rule fight an alligator and win for stick butt in face, so i'm bored inside, let me out i'm lonely outside, let 
+            me in i can't make up my mind whether to go in or out, guess i'll just stand partway in and partway out, contemplating 
+            the universe for half an hour how dare you nudge me with your foot?!?! leap into the air in greatest offense!. Walk on 
+            car leaving trail of paw prints on hood and windshield eat fish on floor.
           </h2>
         </div>
       </div>
